--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: my_app_production
   username: my_app
   password: <%= ENV["MY_APP_DATABASE_PASSWORD"] %>
