--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "app",
   "private": true,
-  "packageManager": "yarn@3.8.7+sha512.bbe7e310ff7fd20dc63b111110f96fe18192234bb0d4f10441fa6b85d2b644c8923db8fbe6d7886257ace948440ab1f83325ad02af457a1806cdc97f03d2508e",
+  "packageManager": "yarn@3.8.7",
+  "engines": {
+    "node": ">=16.9",
+    "yarn": ">=3.8.7"
+  },
   "devDependencies": {
     "esbuild": "^0.25.0"
   },
